--- a/Proyecto.html
+++ b/Proyecto.html
@@ -134,6 +134,7 @@
         </div>
         <button type="submit" class="btn btn-primary">Enviar mensaje</button>
       </form>
+      <script src="js/validacion.js"></script>
     </div>
   </section>
 
